# inline_csharp.rs

./: Cargo.toml  PLAN.md  README.md  ci.sh  release-plz.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/lint/: SKILL.md
.claude/skills/sync-claude/: SKILL.md
.github/workflows/: ci.yml
inline_csharp/: CHANGELOG.md  Cargo.toml
inline_csharp/src/: lib.rs
inline_csharp/tests/: flags.rs  input_args.rs  nested_generics.rs  return_types.rs
inline_csharp_core/: Cargo.toml  README.md
inline_csharp_core/src/: lib.rs
inline_csharp_demo/: Cargo.toml
inline_csharp_demo/DemoLib/: DemoLib.csproj  Greetings.cs  HelloWorld.cs
inline_csharp_demo/src/: main.rs
inline_csharp_macros/: Cargo.toml  README.md
inline_csharp_macros/src/: lib.rs
inline_java/src/: lib.rs
inline_java_core/src/: lib.rs
inline_java_demo/src/: main.rs
inline_java_demo/tests/: arg_passing.rs  flags.rs  nested_generics.rs  return_types.rs
inline_java_macros/: Cargo.toml
inline_java_macros/src/: lib.rs
