[workspace]
resolver = "2"

members = [
  "inline_csharp_core",
  "inline_csharp_macros",
  "inline_csharp",
  "inline_csharp_demo",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Carlo Dell'Acqua <carlo.dellacqua97@gmail.com>"]
repository = "https://github.com/cdellacqua/inline_csharp.rs"
homepage = "https://github.com/cdellacqua/inline_csharp.rs"
keywords = ["csharp", "dotnet", "macro", "interop", "ffi"]
